syntax = "proto3";

import "common.proto";

package chat;

service ChatService {
    rpc SubscribeChatChannel(ChatChannel) returns (stream ServerChatMessage);
    rpc SendChatMessage(ClientChatMessage) returns (common.Empty);
}

message ChatChannel {
    oneof channel {
        common.Empty global = 1;
        uint32 game_id = 2;
        common.UUID room_uuid = 3;
    }
}

message ClientChatMessage {
    ChatChannel channel = 1;
    string message_text = 2;
}

message ServerChatMessage {
    uint32 user_id = 1;
    string message_text = 2;
}
